@@ -9,7 +9,12 @@ Working on:
 	Sort data / query results by clicking on title
 	Data editing form use editing button at each row
 	Data entry - add post from option menu in table browser
-	Implement some of SQLites .commands (.dump, .read fn.ft, ...)
+	Implement some of SQLites .commands:
+	  .read FILENAME		execute sql from file
+	  .import FILE TABLE	import data from file to table
+	  .output FILENAME		send output to file
+	  .dump ?TABLE?			dump database / table supplement to export
+	  .restore ?DB? FILE	restore database form file supplement to restore 	
 
 Version 1.1β
   Select SQL history from query form
